--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                         <a href="#qualification" class="nav__link">
                             <i class="ri-book-open-line"></i>Formación
                         </a>
+                    </li>                    
+                    <li class="nav__item">
+                        <a href="#services" class="nav__link">
+                            <i class="ri-briefcase-2-line"></i>Servicios
+                        </a>
                     </li>
                     <li class="nav__item">
                         <a href="#projects" class="nav__link">
                             <i class="ri-image-edit-fill"></i>Proyectos
-                        </a>
-                    </li>
-                    <li class="nav__item">
-                        <a href="#services" class="nav__link">
-                            <i class="ri-briefcase-2-line"></i>Servicios
                         </a>
                     </li>
                     <li class="nav__item">
@@ -273,6 +273,15 @@
                             </div>
 
                             <h3 class="skills__name">Sketch</h3>
+                            <span class="skills__subtitle">Basico</span>
+                        </div>
+
+                        <div class="skills__data">
+                            <div class="skills__blog">
+                                <img src="assets/img/adobe-xd-1.svg" alt="habilidades imagenes">
+                            </div>
+
+                            <h3 class="skills__name">Adobe XD</h3>
                             <span class="skills__subtitle">Basico</span>
                         </div>
 
